--- a/platformio.ini
+++ b/platformio.ini
@@ -17,5 +17,9 @@ monitor_speed = 115200
 ;build_flags = -Wl,-u,vfprintf -lprintf_flt -lm
 
 lib_deps =
+    thijse/ArduinoLog@^1.1.1
     lowpowerlab/RFM69@^1.4.2
-    hideakitai/ArxContainer @ ^0.4.0
+    EEPROM
+    
+
+lib_extra_dirs = ../iots-rf-core-lib
