--- a/platformio.ini
+++ b/platformio.ini
@@ -13,8 +13,12 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
-
+build_flags = 
+    -std=c++17
+    -std=gnu++17
+    -std=gnu++11
 ;build_flags = -Wl,-u,vfprintf -lprintf_flt -lm
+upload_port = /dev/ttyUSB1
 
 lib_deps =
     thijse/ArduinoLog@^1.1.1
