--- a/platformio.ini
+++ b/platformio.ini
@@ -13,10 +13,8 @@ platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
-build_flags = 
-    -std=c++17
-    -std=gnu++17
-    -std=gnu++11
+build_flags = -std=gnu++17
+build_unflags = -std=gnu++11
 ;build_flags = -Wl,-u,vfprintf -lprintf_flt -lm
 upload_port = /dev/ttyUSB1
 
@@ -24,6 +22,7 @@ lib_deps =
     thijse/ArduinoLog@^1.1.1
     lowpowerlab/RFM69@^1.4.2
     EEPROM
+    SPI
     
 
 lib_extra_dirs = ../iots-rf-core-lib
